# GitHubDesktop2Chinese

./: .gitignore  CMakeLists.txt  GitHubDesktop2Chinese.cpp  GitHubDesktop2Chinese.h  README.md  ReleaseBody.md
.github/workflows/: build.yml  check.yml
Utils/: utils.hpp
include/VersionParse/: Version.hpp
include/WinReg/: WinReg.hpp
json/: localization.json  关于一些注意事项.txt
